aula_6/exemplo-ingress-1-host/ingress-app-1-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meu-app-1
  namespace: credit
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: meu-app-ingress-1-host.com
      http:
        paths:
          - backend:
              service:
                name: meu-app-1-svc
                port:
                  number: 80
            path: /meu-app-1(/|$)(.*)
            pathType: ImplementationSpecific
status:
  loadBalancer: {}
